AngularScript added \ ZC

--- a/AngularDemos/AngularDemos.csproj
+++ b/AngularDemos/AngularDemos.csproj
@@ -73,10 +73,15 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\angular_1.6.2.js" />
+    <Content Include="Views\Demo1.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="AngularControllers\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
