--- a/AngularDemos/AngularDemos.csproj
+++ b/AngularDemos/AngularDemos.csproj
@@ -64,6 +64,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AngularControllers\Demo2.js" />
+    <Content Include="Content\AustraliaFlag.png" />
     <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -77,6 +79,7 @@
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\angular_1.6.2.js" />
     <Content Include="Views\Demo1.html" />
+    <Content Include="Views\Demo2.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
