--- a/AngularDemos/AngularDemos.csproj
+++ b/AngularDemos/AngularDemos.csproj
@@ -1,4 +1,5 @@
-﻿<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.2\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.2\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="..\packages\Microsoft.Net.Compilers.1.3.2\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.1.3.2\build\Microsoft.Net.Compilers.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
@@ -65,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AngularControllers\Demo2.js" />
+    <Content Include="AngularControllers\ngRepeat.js" />
     <Content Include="Content\AustraliaFlag.png" />
     <Content Include="packages.config" />
     <None Include="Web.Debug.config">
@@ -80,6 +82,7 @@
     <Content Include="Scripts\angular_1.6.2.js" />
     <Content Include="Views\Demo1.html" />
     <Content Include="Views\Demo2.html" />
+    <Content Include="Views\ngRepeat.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
